# nFactorial-Ai-Cup-2024

./: README.md
firebase/: .firebaserc
firebase/functions/: package-lock.json
firebase/functions/src/: index.ts
gradrizz-api-py/: README.md  add_dependencies.py  pyproject.toml  requirements.txt
gradrizz-api-py/app/: chain.py  server.py  settings.py  writer.py
gradrizz-api-py/app/search/: search.py
gradrizz-api-py/app/title_generator/: title_generator.py
gradrizz-app/: .env.local.example  package.json  tsconfig.json  vite.config.ts
gradrizz-app/src/: vite-env.d.ts
gradrizz-app/src/components/contexts/: UserContext.tsx
gradrizz-app/src/components/icons/: BotIcon.tsx  CreateChatIcon.tsx  DummyIcon.tsx  GradRizzIcon.tsx  SidebarToggleIcon.tsx  UserIcon.tsx
gradrizz-app/src/components/root/: App.tsx  Main.tsx
gradrizz-app/src/components/router/: RequireAuth.tsx  Router.tsx
gradrizz-app/src/components/screens/: Chat.tsx  Index.tsx  Login.tsx  scrollbar.css
gradrizz-app/src/components/shared/: ChatList.tsx  Header.tsx  Layout.tsx  Loading.tsx  Sidebar.tsx
gradrizz-app/src/lib/: firebase.ts  firestoreService.ts
gradrizz-app/src/services/: api.ts
gradrizz-app/src/types/: svg.d.ts
