[tool.poetry]
name = "gradrizz-api-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = "0.2.1"
pydantic = "2.7.1"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.3.0"
attrs = "23.2.0"
beautifulsoup4 = "4.12.3"
bs4 = "0.0.2"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
dataclasses-json = "0.6.6"
distro = "1.9.0"
dnspython = "2.6.1"
duckduckgo-search = "6.1.0"
email-validator = "2.1.1"
frozenlist = "1.4.1"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
idna = "3.7"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
jsonpatch = "1.33"
jsonpointer = "2.4"
jsonschema = "4.22.0"
jsonschema-specifications = "2023.12.1"
langchain = "0.2.1"
langchain-community = "0.2.1"
langchain-core = "0.2.1"
langchain-openai = "0.1.7"
langchain-text-splitters = "0.2.0"
langsmith = "0.1.63"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
marshmallow = "3.21.2"
mdurl = "0.1.2"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
numpy = "1.26.4"
openai = "1.30.3"
orjson = "3.10.3"
packaging = "23.2"
pydantic-extra-types = "2.7.0"
pydantic-settings = "2.2.1"
pydantic-core = "2.18.2"
pygments = "2.18.0"
pyproject-toml = "0.0.10"
pyreqwest-impersonate = "0.4.5"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pyyaml = "6.0.1"
referencing = "0.35.1"
regex = "2024.5.15"
requests = "2.32.2"
rich = "13.7.1"
rpds-py = "0.18.1"
shellingham = "1.5.4"
sniffio = "1.3.1"
soupsieve = "2.5"
sqlalchemy = "2.0.30"
starlette = "0.37.2"
tenacity = "8.3.0"
tiktoken = "0.7.0"
toml = "0.10.2"
tqdm = "4.66.4"
typing-inspect = "0.9.0"
typing-extensions = "4.12.0"
ujson = "5.10.0"
urllib3 = "2.2.1"
watchfiles = "0.21.0"
websockets = "12.0"
yarl = "1.9.4"
aiohttp = "3.9.5"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
